@@ -75,7 +75,7 @@ class JInstallationModelDatabase extends JModel
 			{
 				$db = JInstallationHelperDatabase::getDbo($options->db_type, $options->db_host, $options->db_user, $options->db_pass, null, $options->db_prefix, false);
 			}
-			catch (JDatabaseException $e)
+			catch (RuntimeException $e)
 			{
 				$this->setError(JText::sprintf('INSTL_DATABASE_COULD_NOT_CONNECT', $e->getMessage()));
 				return false;
@@ -114,7 +114,7 @@ class JInstallationModelDatabase extends JModel
 			{
 				$db->select($options->db_name);
 			}
-			catch (JDatabaseException $e)
+			catch (RuntimeException $e)
 			{
 				// If the database could not be selected, attempt to create it and then select it.
 				if ($this->createDatabase($db, $options->db_name)) {
@@ -190,7 +190,7 @@ class JInstallationModelDatabase extends JModel
 			{
 				$db->query();
 			}
-			catch (JDatabaseException $e)
+			catch (RuntimeException $e)
 			{
 				$this->setError($e->getMessage());
 				return false;
@@ -206,7 +206,7 @@ class JInstallationModelDatabase extends JModel
 			{
 				$extensions = $db->loadObjectList();
 			}
-			catch (JDatabaseException $e)
+			catch (RuntimeException $e)
 			{
 				$this->setError($e->getMessage());
 				$return = false;
@@ -267,7 +267,7 @@ class JInstallationModelDatabase extends JModel
 				{
 					$db->query();
 				}
-				catch (JDatabaseException $e)
+				catch (RuntimeException $e)
 				{
 					$this->setError($e->getMessage());
 					$return = false;
@@ -288,7 +288,7 @@ class JInstallationModelDatabase extends JModel
 		{
 			$db = JInstallationHelperDatabase::getDBO($options->db_type, $options->db_host, $options->db_user, $options->db_pass, $options->db_name, $options->db_prefix);
 		}
-		catch (JDatabaseException $e)
+		catch (RuntimeException $e)
 		{
 			$this->setError(JText::sprintf('INSTL_DATABASE_COULD_NOT_CONNECT', $e->getMessage()));
 			return false;
@@ -349,7 +349,7 @@ class JInstallationModelDatabase extends JModel
 					{
 						$db->dropTable($backupTable, true);
 					}
-					catch (JDatabaseException $e)
+					catch (RuntimeException $e)
 					{
 						$this->setError($e->getMessage());
 						$return = false;
@@ -360,7 +360,7 @@ class JInstallationModelDatabase extends JModel
 					{
 						$db->renameTable($table, $backupTable, $backup, $prefix);
 					}
-					catch (JDatabaseException $e)
+					catch (RuntimeException $e)
 					{
 						$this->setError($e->getMessage());
 						$return = false;
@@ -393,7 +393,7 @@ class JInstallationModelDatabase extends JModel
 		{
 			$db->query();
 		}
-		catch (JDatabaseException $e)
+		catch (RuntimeException $e)
 		{
 			// If an error occurred return false.
 			return false;
@@ -430,7 +430,7 @@ class JInstallationModelDatabase extends JModel
 					{
 						$db->dropTable($table);
 					}
-					catch (JDatabaseException $e)
+					catch (RuntimeException $e)
 					{
 						$this->setError($e->getMessage());
 						$return = false;
@@ -478,7 +478,7 @@ class JInstallationModelDatabase extends JModel
 				{
 					$db->query();
 				}
-				catch (JDatabaseException $e)
+				catch (RuntimeException $e)
 				{
 					$this->setError($e->getMessage());
 					$return = false;
@@ -510,7 +510,7 @@ class JInstallationModelDatabase extends JModel
 		{
 			$db->query();
 		}
-		catch (JDatabaseException $e)
+		catch (RuntimeException $e)
 		{
 			return false;
 		}
