@@ -33,6 +33,7 @@ $ -> Language fix or change
  # [#28149] ImageManager Javascript Error. Thanks Benjamin
  # [#28364] JImage wrong JPEG support detection in PHP 5.2. Thanks Pavel and Rouven
  # [#28276] Finder/Smart Search: Deleting an item does not remove it from Finder's index. Thanks CY Lee
+ # [#28309] Improve forward compatability with Joomla 3.0 by making JDatabaseException extend RuntimeException. Thanks Rouven
 
 10-Apr-2012 Christophe Demko
  ^ [#28336] e-strict error in com_messages (Elin Waring)
